--- a/app/src/sass/_navbar.scss
+++ b/app/src/sass/_navbar.scss
@@ -3,27 +3,15 @@
     background-color: #fff;
     border: 1px solid #ddd;
 
-    input {
-        float: left;
-        margin-left: 100px;
-        padding: 0 5px;
+    a.navbar-brand {
+        img{
+            width: 100px;
+        } 
     }
 
-    a.navbar-brand {
-        
-        color : $gray-dark;
-        font-size: 1rem;
-        margin-top: -7px;
-
-        img{
-            width: 30px;
-        } 
-
-        span {
-            position: absolute;
-            top: 12px;
-            margin-left: 40px;
-        }
+    .form-inline {
+        display: inline-block;
+        max-width: 300px;
     }
 
     .navbar-collapse {
@@ -43,7 +31,6 @@
         display: none;
     }
 
-    .btn.logout,
     .btn.download,
     .btn.save {
         margin-right: 10px;
@@ -64,7 +51,12 @@ body.loaded {
 @media(max-width: 768px) {
     .navbar {
         .navbar-collapse {
-            margin-top: 10px;
+           max-width: 200px;
+           margin-bottom: 6px;
+        }
+        .form-inline {
+            display: block;
+            max-width: 100%;
         }
     }
 }
