--- a/app/src/sass/_table.scss
+++ b/app/src/sass/_table.scss
@@ -1,8 +1,25 @@
 .table {
-
     margin-top: 65px;
     opacity: 0.4;
     transition: all 0.5s ease;
+
+    .controls {
+        display: block;
+        min-height: 42px;
+        margin: 0 4px;
+
+        .dropdown {
+            float: left;
+        }
+
+        .btn.download {
+            display: inline-block;
+        }
+
+        .btn.new {
+            float: right;
+        }
+    }
 
     .row {
         padding: 10px 0 0;
@@ -17,8 +34,15 @@
         }
     }
 
+    /* menu buttons */
     .row > .cell:nth-child(5) {
-        width: 40px;
+        width: 70px;
+        margin-top: 3px;
+        padding: 0;
+
+        .btn {
+            padding: .1rem .4rem 0rem .4rem;
+        }
     }
 
     .thead {
@@ -79,7 +103,7 @@
         }
 
         .row.child {
-            border-left: 1px solid #5cb85c;
+            border-left: 1px solid $brand-primary;
             float: right;
             margin-right: -1%;
             width: 100%;
@@ -96,67 +120,17 @@
             background-color: #fff;
             background-image: none;
             border: 1px solid #ccc;
-            border-radius: 0.1rem;
+            // border-radius: 0.1rem;
             color: #55595c;
             display: inline-block;
             font-size: 1rem;
-            line-height: 1.5;
-            padding: 0.175rem 0.75rem;
+            line-height: 1.6;
             width: 100%;
         }
 
         input[disabled] {
             border-color: transparent;
             background-color: #eee;
-        }
-
-        .btn.js-copy {
-            border: none;
-            padding: 5px 7px 6px;
-            margin-left: -28px;
-            width: 28px;
-            vertical-align: inherit;
-            position: relative;
-            z-index: 1;
-
-            img {
-                width: 100%;
-            }
-        }
-
-        .btn.js-menu {
-            padding: .3rem .7rem;
-            position: relative;
-            z-index: 1;
-
-            img {
-                width: 10px;
-            }
-        }
-
-        .menu {
-            background-color: #ffffff;
-            box-shadow: -1px 0px 1px #cccccc;
-            left: 60px;
-            padding: 6px 10px;
-            position: absolute;
-            opacity: 0;
-            overflow: hidden;
-            transition: all .3s cubic-bezier(0.175, 0.885, 0.320, 1.15);
-            width: 106px;
-            margin-top: -3px;
-            z-index: 1;
-
-            button {
-                display: inline-block;
-                margin: 0 3px;
-                padding: .1rem .5rem;
-            }
-        }
-
-        .menu.active {
-            left: -80px;
-            opacity: 1;
         }
 
     }
@@ -172,7 +146,7 @@
 
     .table {
 
-        margin-top: 95px;
+        margin-top: 108px;
 
         .thead {
             display:none;
