--- a/app/src/sass/_variables.scss
+++ b/app/src/sass/_variables.scss
@@ -32,11 +32,11 @@ $gray-light:                #818a91 !default;
 $gray-lighter:              #eceeef !default;
 $gray-lightest:             #f7f7f9 !default;
 
-$brand-primary:             #0275d8 !default;
-$brand-success:             #5cb85c !default;
-$brand-info:                #5bc0de !default;
-$brand-warning:             #f0ad4e !default;
-$brand-danger:              #d9534f !default;
+$brand-primary:             #ff2e27 !default;
+$brand-success:             #0cc879 !default;
+$brand-info:                #efff43 !default;
+$brand-warning:             #ffa011 !default;
+$brand-danger:              #ff2e27 !default;
 
 
 // Options
@@ -141,9 +141,9 @@ $grid-gutter-width:          1.875rem !default; // 30px
 // Typography
 //
 // Font, line-height, and color for body text, headings, and more.
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500);
+@import url(https://fonts.googleapis.com/css?family=Work+Sans:300,400,500);
 
-$font-family-sans-serif:     "Roboto", Arial, sans-serif !default;
+$font-family-sans-serif:     "Work Sans", Arial, sans-serif !default;
 $font-family-serif:          Georgia, "Times New Roman", Times, serif !default;
 $font-family-monospace:      Menlo, Monaco, Consolas, "Courier New", monospace !default;
 $font-family-base:           $font-family-sans-serif !default;
