--- a/app/src/sass/_locker.scss
+++ b/app/src/sass/_locker.scss
@@ -1,5 +1,6 @@
 .dropdown {
-
+    position: relative;
+    
     .dropdown-menu {
         left: 0;
         
@@ -37,7 +38,10 @@
     }
 
     input {
-        display: inline-block;
+        line-height: 1.6;
+        position: absolute;
+        left: 0;
+        top: 0;
         opacity: 0;
         transition: all 0.3s ease;
         width: 0;
@@ -45,6 +49,6 @@
     
     input.active {
         opacity: 1;
-        width: 150px;
+        width: calc(100% - 50px);
     }
 }
