chore: start on modals

--- a/app/src/sass/_navbar.scss
+++ b/app/src/sass/_navbar.scss
@@ -24,6 +24,10 @@
         float: right;
     }
 
+    .btn.logout {
+        margin-left: 10px;
+    }
+
     .btn.save,
     .btn.logout,
     .btn.download,
