--- a/app/src/sass/main.scss
+++ b/app/src/sass/main.scss
@@ -36,10 +36,10 @@
 // @import "src/components/bootstrap/scss/media";
 // @import "src/components/bootstrap/scss/list-group";
 // @import "src/components/bootstrap/scss/responsive-embed";
-// @import "src/components/bootstrap/scss/close";
+@import "src/components/bootstrap/scss/close";
 
 // // Components w/ JavaScript
-// @import "src/components/bootstrap/scss/modal";
+@import "src/components/bootstrap/scss/modal";
 @import "src/components/bootstrap/scss/tooltip";
 // @import "src/components/bootstrap/scss/popover";
 // @import "src/components/bootstrap/scss/carousel";
