--- a/app/src/sass/_variables.scss
+++ b/app/src/sass/_variables.scss
@@ -86,7 +86,7 @@ $border-width:               1px !default;
 // Settings for the `<body>` element.
 
 $body-bg:                    #fff !default;
-$body-color:                 $gray !default;
+$body-color:                 #262626 !default;
 
 
 // Links
@@ -248,7 +248,7 @@ $btn-primary-color:              #fff !default;
 $btn-primary-bg:                 $brand-primary !default;
 $btn-primary-border:             $btn-primary-bg !default;
 
-$btn-secondary-color:            $gray-dark !default;
+$btn-secondary-color:            #262626 !default; // $gray-dark !default;
 $btn-secondary-bg:               #fff !default;
 $btn-secondary-border:           #ccc !default;
 
