--- a/app/src/sass/_variables.scss
+++ b/app/src/sass/_variables.scss
@@ -467,12 +467,12 @@ $state-info-bg:                  #d9edf7 !default;
 $state-info-border:              darken($state-info-bg, 7%) !default;
 
 $state-warning-text:             #8a6d3b !default;
-$state-warning-bg:               #fcf8e3 !default;
+$state-warning-bg:               $brand-warning !default;
 $state-warning-border:           darken($state-warning-bg, 5%) !default;
 
-$state-danger-text:              #a94442 !default;
-$state-danger-bg:                #f2dede !default;
-$state-danger-border:            darken($state-danger-bg, 5%) !default;
+$state-danger-text:              #262626 !default;
+$state-danger-bg:                white !default;
+$state-danger-border:            $brand-danger !default;
 
 
 // Cards
