--- a/app/src/sass/main.scss
+++ b/app/src/sass/main.scss
@@ -25,7 +25,7 @@
 // @import "src/components/bootstrap/scss/custom-forms";
 @import "src/components/bootstrap/scss/nav";
 @import "src/components/bootstrap/scss/navbar";
-// @import "src/components/bootstrap/scss/card";
+@import "src/components/bootstrap/scss/card";
 // @import "src/components/bootstrap/scss/breadcrumb";
 // @import "src/components/bootstrap/scss/pagination";
 // @import "src/components/bootstrap/scss/pager";
