--- a/app/src/sass/_navbar.scss
+++ b/app/src/sass/_navbar.scss
@@ -56,6 +56,13 @@
 
     .btn {
         float: right;
+
+        &.btn-link {
+            float: none;
+            &:hover {
+                text-decoration: none;
+            }
+        }
     }
 
     .btn.logout {
