--- a/app/src/sass/_table.scss
+++ b/app/src/sass/_table.scss
@@ -6,7 +6,16 @@
     .controls {
         border-bottom: 1px solid #efefef;
         display: block;
-        min-height: 50px;
+        min-height: 75px;
+
+        &>span {
+            display: block;
+            font-weight: 600;
+            letter-spacing: .2rem;
+            text-transform: uppercase;
+            font-size: .75rem;
+            margin: 5px 0;
+        }
 
         .dropdown {
             float: left;
