--- a/app/src/sass/_variables.scss
+++ b/app/src/sass/_variables.scss
@@ -141,10 +141,10 @@ $grid-gutter-width:          1.875rem !default; // 30px
 // Typography
 //
 // Font, line-height, and color for body text, headings, and more.
-@import url(https://fonts.googleapis.com/css?family=Work+Sans:300,400,500);
+// @import url(https://fonts.googleapis.com/css?family=Work+Sans:300,400,500);
 
 $font-family-sans-serif:     "Work Sans", Arial, sans-serif !default;
-$font-family-serif:          Georgia, "Times New Roman", Times, serif !default;
+$font-family-serif:          "Work Sans", Arial, sans-serif !default;
 $font-family-monospace:      Menlo, Monaco, Consolas, "Courier New", monospace !default;
 $font-family-base:           $font-family-sans-serif !default;
 
