--- a/app/src/sass/_loader.scss
+++ b/app/src/sass/_loader.scss
@@ -14,25 +14,52 @@
 }
 
 .load-overlay {
+    background-color: #ffde20;
     display: block;
     position: fixed;
-    top: 56px;
+    top: 0;
     right: 0;
     bottom: 0;
     left: 0;
-    z-index: 5;
+    padding: 0 40px;
+    z-index: 1040;
+
+    .card {
+        box-shadow: 2px 10px 30px -18px;
+        border: none;
+        position: relative;
+        max-width: 430px;
+        margin: 0 auto;
+        text-align: center;
+        margin-top: 15%;
+        border-radius: 40px;
+
+        .card-title img {
+            max-width: 200px;
+        }
+        
+        .card-text {
+            font-size: 20px;
+            margin-bottom: 3rem;
+        }
+
+        .card-block {
+            padding: 3.25rem;
+        }
+    }
 
     .btn {
+        margin-bottom: -1rem;
         opacity: 1;
-        position: absolute;
         transition: opacity 0.7s ease;
-        left: 50%;
-        margin-left: -117px;
-        margin-top: 100px;
 
         img {
             width: 200px;
         }
+    }
+
+    .loader {
+        position: relative;
     }
 }
 
@@ -46,6 +73,7 @@ body.loading {
     .load-overlay {
         .btn {
             opacity: 0;
+            display: none;
         }
     }
 }
