--- a/app/src/sass/_loader.scss
+++ b/app/src/sass/_loader.scss
@@ -44,13 +44,14 @@
         }
 
         .card-block {
-            padding: 3.25rem;
+            padding: 3.25rem 2.25rem;
         }
     }
 
     .btn {
         margin-bottom: -1rem;
         opacity: 1;
+        padding: 0;
         transition: opacity 0.7s ease;
 
         img {
